--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Free Web tutorials">
+  <meta name="description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incididunt ut labore et dolore magna aliqua.">
   <meta name="author" content="Szilágyi Péter">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1" >
-  <title>Weboldal címe</title>
+  <title>J. Martin - Grafikus</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/responsive.css">
 </head>
@@ -62,6 +62,9 @@
         <div class="intro-image">
           <img src="img/happy-man.png" alt="">
         </div>
+        <div class="mobile-only">
+          <button type="button" name="button" class="orange-inverse-button">Írj nekem!</button>
+        </div>
       </div>
 
     </div>
@@ -108,7 +111,7 @@
 
 
       </div>
-      <button type="button" name="button" class="orange-inverse-button">továbbiak</button>
+      <button type="button" name="button" class="orange-inverse-button">Továbbiak</button>
       <!-- <button type="button" name="button" class="white-button">továbbiak</button> -->
     </div>
 
@@ -278,11 +281,6 @@
     </div>
 
     <div class="kapcsolat">
-
-      <svg viewBox="0 0 50 50" class="background-circle" id="bgCircle5">
-        <circle cx="25" cy="25" r="25" fill="#f5ba45" />
-      </svg>
-
 
       <h1>Lépjünk <br>
         <span>kapcsolatba!</span>
