--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="intro-section">
         <div class="intro-texts">
           <h1>Helló! <br> <span>Martin vagyok.</span></h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Grafikus vagyok, lassan 7 éve valósítom meg ügyfeleim elképzeléseit. <span>Ha felkeltettem az érdeklődésed, keress bátran, alkossunk valami nagyon jót!</span>  </p>
           <button type="button" name="button" class="orange-button">Keress fel!</button>
         </div>
         <div class="intro-image">
